_2007_09_28__14_16_39_ Chi-Hsiu Liang

  * QD for double-double and quad-double precisions. 
  * Move normalization function into matrix.h
  * Completed writing of MesmerILT.cpp but not linked and tested.
  * Modified namings of variables:  ngrn -> MaximumGrain
  * Add README, MesmerPrecision.h
  * Mesmer FAQ file in documentation folder
  * Other minor modifications

_2007_09_25__10_31_44_ Chi-Hsiu Liang

  * Add a ToDo file
  * Add qd source into trunk directory
  * Precision definitions in MesmerConfig.h
  * More edits to MesmerILT.cpp
  * Modified namings of variables:  kfmc -> cellKfmc
                                    m_kfgrn -> m_GrainKfmc
                                    m_kfmc -> m_CellKfmc
                                    dosGrn -> grainDOS
                                    eGrn -> grainEne
                                    m_gdos -> m_grainDOS
                                    m_egrn -> m_grainEne
                                    rctDos -> rctDOS
                                    pdtDos -> pdtDOS
                                    
  * change CellEne and CellDOS to vectors
  * some other minor modifications
  
_2007_09_14__16_30_42_ Chi-Hsiu Liang

  * checked for new and delete declarations
  * reordered some dependencies
  * Modified namings of variables:  decll -> CellEne, 
                                    ddos -> CellDOS, 
                                    m_cdos -> m_CellDOS, 
                                    m_ecll -> m_CellEne,
                                    pcollidingmolecule -> pCollidingMolecule,
                                    KCMLTOPCM -> KcalPerMolToRC,
                                    ddosTS -> TScellDOS,
                                    boltzmann -> boltzmann_RCpK
                                    pi -> M_PI

  * Modified naming of functions: Initialize() -> InitializeMolecule(), 
                                  Initialize() -> InitializeReaction(),